--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 url: "http://moovweb.github.com/uranium/"
-source: "examples/site"
-destination: "examples/site/_site"
-auto: true
+source: "examples/"
+destination: "_examples"
 pygments: true
